Bug 214559 - Random mode doesn't work if repeat mode is enabled
Summary: Random mode doesn't work if repeat mode is enabled
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 214585 214624 215305 215565 216714 217077 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-14 19:15 UTC by Anthony Vital
Modified: 2010-03-21 00:01 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony Vital 2009-11-14 19:15:06 UTC
Version:           2.2.1 (using KDE 4.3.2)
OS:                Linux
Installed from:    Debian testing/unstable Packages

The random mode won't work if any repeat mode is enabled. It will work only if the repeat mode is set to "desactivated".
Comment 1 dodi4u 2009-11-15 00:54:12 UTC
Not sure if it helps, but I can confirm the bug just as described above. I am running the same KDE- and amarok-version (sidux dist-upgrade on Nov 14, 23:30h CET).
Comment 2 Mikko C. 2009-11-15 10:08:33 UTC
*** Bug 214585 has been marked as a duplicate of this bug. ***
Comment 3 Mikko C. 2009-11-15 10:12:31 UTC
*** Bug 214624 has been marked as a duplicate of this bug. ***
Comment 4 Markus Zimmermann 2009-11-16 10:37:09 UTC
I'm using the "amarok-2.2.1-41.2.x86_64.rpm" package of the KDE43 opensuse 11.2 repository and can confirm this bug. How can I help to solve it?
Comment 5 Myriam Schweingruber 2009-11-16 12:00:17 UTC
Markus, please talk to the developers in #amarok on irc.freenode.net if you want to give a hand :)
Comment 6 Andrea Scarpino 2009-11-17 19:49:42 UTC
confirmed on Arch Linux too.
kde 4.3.3, qt 4.5.3, i686.
Comment 7 Rick W. Chen 2009-11-19 10:07:31 UTC
Fixed in git, commits from v2.2.1-168-gd90351a to v2.2.1-171-g4112a54.
Comment 8 Myriam Schweingruber 2009-11-19 19:54:28 UTC
*** Bug 215305 has been marked as a duplicate of this bug. ***
Comment 9 Mikko C. 2009-11-21 16:49:01 UTC
*** Bug 215565 has been marked as a duplicate of this bug. ***
Comment 10 Myriam Schweingruber 2009-11-29 20:48:30 UTC
*** Bug 216714 has been marked as a duplicate of this bug. ***
Comment 11 Myriam Schweingruber 2009-12-02 16:19:45 UTC
*** Bug 217077 has been marked as a duplicate of this bug. ***
Comment 12 Myriam Schweingruber 2010-01-13 00:42:18 UTC
*** Bug 216714 has been marked as a duplicate of this bug. ***
Comment 13 Myriam Schweingruber 2010-01-13 00:44:09 UTC
Reopening based on Comment #3 in bug 216714, marked as duplicate.
Rick, could you have a look at that, please?
Comment 14 Rick W. Chen 2010-01-13 05:56:48 UTC
My last commits (#7) turned out to be something which was done much earlier
(and reverted). This I think was the reason Nikolaj introduced the new system [1].
And, see comment #3 from bug 221798.

 1. http://lists.kde.org/?l=amarok-devel&m=125866201422762
Comment 15 Maxime Chassagneux 2010-01-13 07:28:41 UTC
Based on the comment system described by Nikolaj I don't undesrtand how I could listen my musik randomly from all my playlist with no stop when the playlist was completly play. 
A example of a use case is : Amarok play musik ( 2 albums ) randomly in a shop (ambiance musik) all the day... I don't want to select a new musik when the playlist is finished.
Comment 16 langstr 2010-03-20 23:50:01 UTC
This is fixed in the current git. See comment #13 from bug 221798.