Fix "Random mode doesn't work if repeat mode is enabled"

BUG: 214559
BUG: 212910